--- a/chaiHeadq/tweet/templates/index.html
+++ b/chaiHeadq/tweet/templates/index.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            background-color: black;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-    test template
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+Chiranth and Tweet
+{% endblock %}
+
+{% block content %}
+
+<h1 class="text-center text-white mt-4">
+    Welcome to Chiranth's Django Project
+</h1>
+
+{% endblock %}
