Defined the models

--- a/chaiHeadq/tweet/templates/index.html
+++ b/chaiHeadq/tweet/templates/index.html
@@ -6,7 +6,7 @@ Chiranth and Tweet
 
 {% block content %}
 
-<h1 class="text-center text-white mt-4">
+<h1 class="text-center mt-4">
     Welcome to Chiranth's Django Project
 </h1>
 
