--- a/chaiHeadq/templates/layout.html
+++ b/chaiHeadq/templates/layout.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,10 +12,10 @@
     />
     <title>{% block title %} Chiranth and Django {% endblock %}</title>
   </head>
-  <body class="bg-dark">
+  <body >
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Tweet Bar</a>
         <button
           class="navbar-toggler"
           type="button"
